Add a name propertie on the Account
