# swagger.yml
@@ -75,6 +75,13 @@ paths:
       security:
         - admin: []
       description: Create a new `Account`
+      parameters:
+        - in: body
+          name: body
+          description: Fields that must me modified
+          required: false
+          schema:
+            $ref: "#/definitions/NewAccount"
       responses:
         200:
           description: successful operation
@@ -98,6 +105,28 @@ paths:
           description: account ID
           required: true
           type: string
+      responses:
+        200:
+          description: successful operation
+          schema:
+            $ref: '#/definitions/Account'
+    patch:
+      security:
+        - admin: []
+        - owner: []
+      description: Modify an `Account` object
+      parameters:
+        - name: account
+          in: path
+          description: account ID
+          required: true
+          type: string
+        - in: body
+          name: body
+          description: Fields that must me modified
+          required: false
+          schema:
+            $ref: "#/definitions/NewAccount"
       responses:
         200:
           description: successful operation
@@ -468,6 +497,9 @@ definitions:
       id:
         type: string
         description: Account ID.
+      name:
+        type: string
+        description: Account name.
       key:
         type: string
         description: Secret key.
@@ -475,6 +507,11 @@ definitions:
         type: string
         format: dateTime
         description: Date the `Account` was created.
+  NewAccount:
+    properties:
+      name:
+        type: string
+        description: Account name.
   Queues:
     properties:
       list:
